fixed shifting bug

--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -1,3 +1,4 @@
+/* container containing white box and lace */
 div.wrapper {
     margin: 0 auto;
     width: 80%;
@@ -13,6 +14,7 @@ div.wrapper {
     border-image: 76 repeat url(https://lh3.googleusercontent.com/o-AmkgUtE-j5QcXB96gMQt80O4UxaDxMiP2En4imiWnF9ZN363dlePAyJRpeJvhQJWjUmRSp9wxKAnyW3AZsKsSmAy4NVD1ROnZ8LXMnT8-JcGac5ch9YXuyyRiyLOhTk5JJynfd8LKMVCg3VnQKAiXoT2CWrB8UHLNEUNcng1YLOyWN9k56q5n3vb8trNtv67SrANk77IiFpoM8_N0eu1i7zkqtk_kI2cxwwUn85dvHt42IkKzC1Q1TVNrG1cJ0-FKRaT9APUf3yGh79p423Zn-p6RCz2oeqT1uUu2qrVrVdn58betT27ROxrEjIhryCOTjsI4_A_IK9Zy5O4GJ7Y92DCNe1Ug18eetmFGMxW6eyuZJ9MkqXrGH1dCv43dJYWQNYjn7N-dB63DeDCf3P6X_ARUKS_lKZfSPyazlBRAPrBVvFaIu8RXJh3bdM0SfSR6SIOuy4Wzo_8DF8rHZ71YJMq9yQ7yE4Eend3VsFqan2jasLpQd2oUN-dE82QUs6v2PoOynQhVqkUDe5AkIKn4BGX1YnoqImLRMUVYzYN0WVx-ikxEWgDVTnYU9PqK5D41ePIyTdNNq3BLB2s-5RMqyaILGageeZhE2Mv14_QYyY5-PQpYK-pvBG6iKNBEZc91cDYXSnuVKBeV8j5hYE00HAJYm3hiIuux23JwUC5POkIkzXDNJcV06Wr_FdNc5__FiWEPe39ANlRpgx4KWB7fJ=w76-h320-no); */
 }
 
+/* left lace border */
 div.wrapper:before {
     content: " ";
     background-image: url(https://lh3.googleusercontent.com/96_1-6pZIPKEsk0D-cZgLAj3GwrofXhxBU2x_9jm7yYJPFlrYzBVZWUfdX8L0igqBgF77QdqBr_jdnJKV_SHGV7IRRfqAX0FxNQok9rf3W6CrBUT_q2YkjBTmjcPW_7MD7umv1roD1W801lnxp3KcoKIb_frKuB1pSlLDfEXw2J2-kpFoBgbpdF7i7I5vvRlM6qX7qDpVWuwW-KPvvcocZJRHBftmDpwQcTBEwITy-Je81vL2TaGAHT5k0LwsRpfYg1Flcx7dN6fik4rgR2l8wZbRHOP_wbupIcznnOjBoVTbC3PMhBwEkKOIOs_OJ7C3QkQwlKIq5kTvhesmqdo8_IxxDd-zU_D3GyKZ0Gu4swSjygk6fLPYvYq9G_fbHSLkghs2XmH3BI92hNVLxW92C-IKqpeHqKXBEXw0mL9Arevgj6qqeSqm5dyikxE18mdURwJgQemuiq142K4cWl_Yrngs8ziqKKcx9P1BeEA6Zn4gKzIz7OGtP8vNkl4zxjtVHBePJlNY4INh28rDjYGbfjLrJtowmsWWPl5U1lNYwcuf3YAzQgXGFsiGUxdwGdsJV3J_3qq_6V2xtETMiIrGnvd-MmAGBWQaC1iqjLxQNjnVDZHuAmZ0O1W45Q4ouRcP45QBRY0-JvIMfciilD5d9R0cV4OrDg3XWNNzNAhd2IHyKBbGHSHxBEPmHdxiK9ebjqsPvrY1RLkqQhCRb6PDi8H=w44-h320-no);
@@ -22,6 +24,7 @@ div.wrapper:before {
     top: 0;
 }
 
+/* right lace border */
 div.wrapper:after {
     content: " ";
     background-image: url(https://lh3.googleusercontent.com/96_1-6pZIPKEsk0D-cZgLAj3GwrofXhxBU2x_9jm7yYJPFlrYzBVZWUfdX8L0igqBgF77QdqBr_jdnJKV_SHGV7IRRfqAX0FxNQok9rf3W6CrBUT_q2YkjBTmjcPW_7MD7umv1roD1W801lnxp3KcoKIb_frKuB1pSlLDfEXw2J2-kpFoBgbpdF7i7I5vvRlM6qX7qDpVWuwW-KPvvcocZJRHBftmDpwQcTBEwITy-Je81vL2TaGAHT5k0LwsRpfYg1Flcx7dN6fik4rgR2l8wZbRHOP_wbupIcznnOjBoVTbC3PMhBwEkKOIOs_OJ7C3QkQwlKIq5kTvhesmqdo8_IxxDd-zU_D3GyKZ0Gu4swSjygk6fLPYvYq9G_fbHSLkghs2XmH3BI92hNVLxW92C-IKqpeHqKXBEXw0mL9Arevgj6qqeSqm5dyikxE18mdURwJgQemuiq142K4cWl_Yrngs8ziqKKcx9P1BeEA6Zn4gKzIz7OGtP8vNkl4zxjtVHBePJlNY4INh28rDjYGbfjLrJtowmsWWPl5U1lNYwcuf3YAzQgXGFsiGUxdwGdsJV3J_3qq_6V2xtETMiIrGnvd-MmAGBWQaC1iqjLxQNjnVDZHuAmZ0O1W45Q4ouRcP45QBRY0-JvIMfciilD5d9R0cV4OrDg3XWNNzNAhd2IHyKBbGHSHxBEPmHdxiK9ebjqsPvrY1RLkqQhCRb6PDi8H=w44-h320-no);
@@ -34,6 +37,7 @@ div.wrapper:after {
     transform: scaleX(-1);
 }
 
+/* white container with contents */
 div.mainContents {
     margin-top: 0;
     background-color: white;
@@ -41,35 +45,59 @@ div.mainContents {
     width: 75%;
     margin: 0 auto;
     height: 100%;
+    padding-bottom: 2rem;
 }
 
 div.banner {
     padding: 15px;
 }
 
-div.banner > h2 {
+/* div.banner > h2 {
     font-size: 2.5rem;
 }
 
 div.banner > h2, h3 {
     font-family: 'Great Vibes', cursive;
-}
+} */
 
 div.banner > img {
     width: 50%;
 }
 
+/* navbar element */
 nav.navbar-light {
-    background-color: #FFEDEF;
+    /* background-color: #FFEDEF; */
     /* border-top: dotted;
     border-bottom: dotted; */
-    border-width: 8px;
+    /* border-width: 8px; */
     /* border-color: #000; */
-    margin: 2rem 0;
+    margin-bottom: 2rem;
+}
+
+/* ribbon */
+nav.navbar-light:after, nav.navbar-light:before {
+    content: " ";
+    border: 1.75em solid #FFEDEF;
+}
+
+nav.navbar-light:after {
+    border-right-color: transparent;
+}
+
+nav.navbar-light:before {
+    border-left-color: transparent;
+}
+
+/* inner container for navlinks */
+div#navbar {
+    background-color: #FFEDEF;
+    height: 3.5em;
 }
 
 div#navbar > ul > li > a {
     color: rgba(0, 0, 0, 0.6);
+    text-decoration: none;
+    overflow: hidden;
 }
 
 div#navbar > ul > li > a:hover {
