--- a/angular-client/src/app/photos/engagement-photos/engagement-photos.component.css
+++ b/angular-client/src/app/photos/engagement-photos/engagement-photos.component.css
@@ -10,9 +10,10 @@ img:hover {
 
 /* modal */
 #photoModal {
+    position: fixed;
     padding: 0 !important;
     margin: 0;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(40, 40, 40, 0.8);
     width: 100vw;
 }
 
